--- a/templates/user.html
+++ b/templates/user.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Add User</title>
+        <link rel="stylesheet" type="text/css" href="static/doc-helper/css/base.css">
+    </head>
 <body>
 
     <h1>Add User</h1>
